2005-10-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	* gaphor/data/plugins/kidexport/plugin.xml: added module dependency kid.

2005-10-10  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.gaphor: added Flow Final, Fork and Join nodes to
	Control nodes diagram
	* gaphor/diagram/activitynodes.py: implemented Flow Final and Fork
	nodes

2005-10-09  Jeroen Vloothuis  <jeroen@vloothuis.net>
	* gaphor/data/plugins/kidexport: New template based exported for XMI

2005-10-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* Released version 0.7.1

2005-10-07  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.gaphor: ConnectableElement derives from TypedElement
	according to UML 2.0 specification; Interface derives from
	ConnectableElement; kill Property multiple incarnations

2005-10-06  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: fixed bug with multiple ConnectableElement
	classes.
	* data/plugins/checkmodel/checkmodel(gui).py: Added check to search for
	duplicate class names.

2005-09-12  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.gaphor: extended Internal Structures diagram to
	support delegation and assembly connectors

2005-06-26  wrobell <wrobell@pld-linux.org>
	* setup.py, gaphor/storage.py, gaphor/UML/uml2.gaphor: use unkown
	navigability state of UML 2.0, when converting from UML 1.x association
	non-navigability (UML 2.0 metamodel fixed, too); gaphor file format
	version increased to 0.7.1

2005-06-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/console.py, gaphor/ui/diagramtab.py,
	gaphor/ui/namespace.py: s/gtk.TRUE/True/, s/gtk.FALSE/False/.

2005-05-28  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py, gaphor/ui/diagramactions.py:
	capitalize menu labels, tooltips first word capitalized

2005-05-25  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py, gaphor/diagram/operation.py,
	gaphor/ui/namespace.py: allow to set class operation to be abstract
		